apps/threadfin/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: threadfin
  namespace: threadfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`threadfin.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: threadfin
          port: 34400
  tls:
    secretName: threadfin-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: threadfin-http
  namespace: threadfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`threadfin.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: threadfin
          port: 34400
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: threadfin
spec:
  redirectScheme:
    scheme: https
    permanent: true
